# Data_Analize_Govorov-5

./: README.md  environment.yml  pyproject.toml
individual/: ind1.py  ind2.py
