[tool.poetry]
name = "data-analize-govorov-5"
version = "0.1.0"
description = ""
authors = ["Artorias1469 <pupas5676@gmail.com>"]
readme = "README.md"
packages = [{include = "data_analize_govorov_5"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
